2003-07-06  Stefan Monnier  <monnier@cs.yale.edu>

	* m/amdx86-64.h (MARKBIT):
	* m/ia64.h (MARKBIT): Remove definition since lisp.h does not compare
	MARKBIT and ARRAY_MARK_FLAG any more.

	* m/hp800.h (XSETMARKBIT):
	* m/sr2k.h (XSETMARKBIT):
	* lisp.h (XSETMARKBIT): Remove unused macro.

	* lisp.h (mark_object): Change prototype.

	* alloc.c (mark_object): Change arg *Lisp_Object -> Lisp_Object.
	(last_marked): Change accordingly.
	(mark_interval, mark_maybe_object, mark_maybe_pointer)
	(Fgarbage_collect, mark_glyph_matrix, mark_face_cache, mark_image)
	(mark_buffer): Update calls to mark_object.

	* bytecode.c (mark_byte_stack):
	* fns.c (sweep_weak_table):
	* keyboard.c (mark_kboards): Update calls to mark_object.

2003-07-06  Jason Rumney  <jasonr@gnu.org>

	* alloc.c (struct ablock): Only include padding when there is some.

2003-07-04  Stefan Monnier  <monnier@cs.yale.edu>

	* alloc.c (ALIGN): Add casts to simplify usage.
	(BLOCK_ALIGN, BLOCK_BYTES, ABLOCKS_PADDING, ABLOCKS_SIZE)
	(ABLOCKS_BYTES, ABLOCK_ABASE, ABLOCKS_BUSY, ABLOCKS_BASE): New macros.
	(struct ablock, struct ablocks): New types.
	(free_ablock): New global var.
	(lisp_align_malloc, lisp_align_free): New functions.
	(FLOAT_BLOCK_SIZE): Redefine in terms of BLOCK_BYTES.
	(struct float_block): Reorder and add gcmarkbits.
	(GETMARKBIT, SETMARKBIT, UNSETMARKBIT, FLOAT_BLOCK, FLOAT_INDEX)
	(FLOAT_MARKED_P, FLOAT_MARK, FLOAT_UNMARK): New macros.
	(init_float, make_float): Use lisp_align_malloc.
	(free_float, live_float_p): Don't use `type' any more.
	(make_float): Use FLOAT_UNMARK to access to mark bit.
	(mark_maybe_object, mark_maybe_pointer, survives_gc_p):
	Use FLOAT_MARKED_P to access the mark bit.
	(pure_alloc): Simplify use of ALIGN.
	(mark_object): Use FLOAT_MARK to access the mark bit.
	(gc_sweep): Use new macros to access the float's mark bit.
	(init_alloc_once): Init free_ablock.

	* lisp.h (struct Lisp_Float): Remove unused field `type'.

2003-06-27  Stefan Monnier  <monnier@cs.yale.edu>
