@@ -1,3 +1,14 @@
+2003-07-06  Jason Rumney  <jasonr@gnu.org>
+
+	* w32term.h (ClipboardSequence_Proc): New type.
+
+	* w32fns.c (clipboard_sequence_fn): New variable.
+	(globals_of_w32fns): Initialize it.
+
+	* w32select.c (last_clipboard_sequence_number): New variable.
+	(Fw32_set_clipboard_data, Fw32_get_clipboard_data): Use sequence
+	number if possible.
+
 2003-07-06  Stefan Monnier  <monnier@cs.yale.edu>
 
 	* m/amdx86-64.h (MARKBIT):
